feat: 更新应用名称为"通信智能体机器人训练平台"
更新应用名称及相关文案，包括页面标题、logo alt文本、产品名称等
禁用自动更新功能及相关UI组件
修改默认语言为中文
添加eslint配置

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -278,7 +278,7 @@
     "apply": "Apply"
   },
   "home": {
-    "title": "Easy Dataset",
+    "title": "Communication Agent Robot Training Platform",
     "subtitle": "A powerful tool for creating fine-tuning datasets for Large Language Models",
     "createProject": "Create Project",
     "searchDataset": "Search Public Datasets"
