--- a/locales/tr/translation.json
+++ b/locales/tr/translation.json
@@ -276,7 +276,7 @@
     "detailInfo": "Detaylı Bilgi"
   },
   "home": {
-    "title": "Easy Dataset",
+    "title": "İletişim Ajanı Robot Eğitim Platformu",
     "subtitle": "Büyük Dil Modelleri için ince ayar veri setleri oluşturmak için güçlü bir araç",
     "createProject": "Proje Oluştur",
     "searchDataset": "Açık Veri Setlerinde Ara"
