--- a/locales/zh-CN/translation.json
+++ b/locales/zh-CN/translation.json
@@ -279,7 +279,7 @@
     "apply": "应用"
   },
   "home": {
-    "title": "Easy Dataset",
+    "title": "通信智能体机器人训练平台",
     "subtitle": "一个强大的大型语言模型微调数据集创建工具",
     "createProject": "创建项目",
     "searchDataset": "搜索公开数据集"
